k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kuborder-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kuborder-backend

  template:
    metadata:
      labels:
        app: kuborder-backend

    spec:
      containers:
      - name: backend
        image: ghcr.io/lakshya-8000cr/kuborder-backend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000
        
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
