k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kuborder-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kuborder-frontend

  template:
    metadata:
      labels:
        app: kuborder-frontend

    spec:
      containers:
      - name: frontend
        image: ghcr.io/lakshya-8000cr/kuborder-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
